# aerophone

./: .gitignore  CMakeLists.txt  README.md  build_project.sh  lgca1.py  lgca2.py
automaton_2d/: CMakeLists.txt  README.md  automaton_2d.c  automaton_2d.h  automaton_example  build.sh  main.c
automaton_2d/include/: audio_handler.h  computationworker.h
automaton_2d/src/: audio_handler.cpp  automaton_2d.cpp  computationworker.cpp  main.cpp
automaton_neon/: automaton_example  automaton_neon.c  automaton_neon.h  main.c
simd/: main.c  simd_neon.c
simd_test/: simd_example  simd_neon.h
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/gui/: MainWindow.cpp  MainWindow.h  RenderingWidget.cpp  RenderingWidget.h
src/simulation/: AeolianToneGenerator.cpp  AeolianToneGenerator.h  DigitalWaveguide.cpp  DigitalWaveguide.h  WaveSimulation.cpp  WaveSimulation.h
